# xiaodu_parser_c

./: .gitignore  CMakeLists.txt  build.sh  main.c  readme.md
aes/: CMakeLists.txt
aes/include/mbedtls/: aesni.h
dev_proto/: CMakeLists.txt  gateway.pb-c.c  gateway.pb-c.h
grpc_proto/: CMakeLists.txt  Makefile  parser.grpc-c.c  parser.grpc-c.h  parser.grpc-c.service.c
httpd/: CMakeLists.txt  httpd.c  httpd.h
proto/: CMakeLists.txt  cmake_install.cmake  parser.grpc-c.c  parser.grpc-c.h  parser.proto
